gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rollouts-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - rollouts-demo.apps.local
    port:
      name: http
      number: 80
      protocol: HTTP
