virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc
spec:
  gateways:
  - rollouts-demo
  hosts:
  - rollouts-demo.apps.argoproj.io
  http:
  - name: primary
    route:
    - destination:
        host: rollouts-demo
      weight: 100
    - destination:
        host: rollouts-demo-preview
      weight: 0
